syntax = "proto3";

import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";

package com.example.demo.serviceImpl.userService;

service UserManager {
    rpc addUser(User) returns (google.protobuf.Int32Value);
    rpc getAllUsers(google.protobuf.Empty) returns (stream User);
}

message User {
    int32 id = 1;
    string name = 2;
    string email = 3;
    string phoneNumber = 4;
    string deviceID = 5;
}